--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -24,4 +24,12 @@
     <string name="str_module_two"> 系统编程 </string>
     <string name="str_module_three"> 原生应用开发 </string>
     <string name="str_module_four"> 跨平台应用开发 </string>
+
+    <!-- 模块选项 -->
+    <string-array name="course_options">
+        <item> 第一模块 </item>
+        <item> 第二模块 </item>
+        <item> 第三模块 </item>
+        <item> 第四模块 </item>
+    </string-array>
 </resources>
