Make a default card to undefined grades & Add to the static rule

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -17,7 +17,7 @@
 
     <!-- Notas -->
     <string name="str_grade_complete"> Nota total: </string>
-    <string name="str_grade_incomplete"> Nota não registrada: </string>
+    <string name="str_grade_incomplete"> Nota não registrada </string>
 
     <!-- Módulos -->
     <string name="str_module_one"> Introdução à Programação </string>
