--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <string name ="str_course"> 软件开发 </string>
+    <string name="str_home"> 主屏幕 </string>
 
     <!-- 输入与按钮 -->
     <string name="str_input"> 请录入课程成绩 </string>
@@ -8,12 +9,29 @@
     <string name="str_next_btn"> 下一个 </string>
     <string name="str_exit_btn"> 退出 </string>
 
-    <!-- 页面 -->
-    <string name="str_home"> 主屏幕 </string>
+    <!-- 页面 - 第一模块 -->
+    <string name="str_computers"> Computer Fundamentals </string>
+    <string name="str_mobile"> Introduction to Mobile App Development </string>
+    <string name="str_programming"> Introduction to Programming </string>
+    <string name="str_programmingLab"> Programming Laboratory </string>
+
+    <!-- 页面 - 第二模块 -->
+    <string name="str_oop"> Oriented Object Programming </string>
+    <string name="str_database"> Introduction to Database </string>
+    <string name="str_ads"> Algorithms and Data Structures </string>
+    <string name="str_devLab"> Development Laboratory </string>
+
+    <!-- 页面 - 第三模块 -->
     <string name="str_android"> 安卓开发 </string>
     <string name="str_ios"> IOS开发 </string>
-    <string name="str_database"> 数据库专题 </string>
-    <string name="str_oop"> 面向对象编程特别课题 </string>
+    <string name="str_specialDatabase"> 数据库专题 </string>
+    <string name="str_specialOop"> 面向对象编程特别课题 </string>
+
+    <!-- 页面 - 第四模块 -->
+    <string name="str_specialAndroid">Android特别主题</string>
+    <string name="str_specialIOS">iOS特别主题</string>
+    <string name="str_multiplatform">多平台开发</string>
+    <string name="str_profissional">创业和职业指导</string>
 
     <!-- 成绩 -->
     <string name="str_grade_complete"> 总评成绩: </string>
