Make the DrawerLayout in MainActivity & SetGradeActivity & Validate to prevent duplicate grades for existing cards. Additionally, update GradleBuild & apply a dark theme.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -43,6 +43,9 @@
     <string name="str_module_three"> Desarrollo de Aplicaciones Nativas </string>
     <string name="str_module_four"> Desarrollo de Aplicaciones Multiplataforma </string>
 
+    <string name="phrase_Start"> La materia </string>
+    <string name="phrase_End"> ya tiene una nota registrada. </string>
+
     <!-- Opción de módulos -->
     <string-array name="course_options">
         <item>Módulo 1</item>
